<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Orgzly</string>
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="new_">New</string>
    <string name="select">Select</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="no_link">No Link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="complete">Complete</string>
    <string name="complete_with_repeater">Complete %s</string>
    <string name="close">Close</string>
    <string name="import_">Import</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="notes">Notes</string>
    <string name="property">Property</string>
    <string name="import_as">Import as…</string>
    <string name="new_notebook">New notebook</string>
    <string name="new_folder">New folder</string>
    <plurals name="notes_deleted">
        <item quantity="one">Note deleted</item>
        <item quantity="other">Deleted <b>%d</b> notes</item>
    </plurals>
    <string name="no_notes_deleted">No notes deleted</string>
    <plurals name="notes_cut">
        <item quantity="one">Note cut</item>
        <item quantity="other">Cut <b>%d</b> notes</item>
    </plurals>
    <string name="no_notes_cut">No notes cut</string>
    <plurals name="notes_pasted">
        <item quantity="one">Note pasted</item>
        <item quantity="other">Pasted <b>%d</b> notes</item>
    </plurals>
    <string name="no_notes_pasted">Nothing to paste</string>
    <string name="fragment_note_title_hint">Title</string>
    <string name="fragment_note_tags_hint" tools:ignore="typos">tag tag</string>
    <string name="import_org_file">Import Org file</string>
    <string name="state_spinner_prompt">State</string>
    <string name="priority_spinner_prompt">Priority</string>
    <string name="message_dropbox_unlinked">Unlinked from Dropbox</string>
    <string name="message_dropbox_linked">Linked to Dropbox successfully</string>
    <string name="repos_preference_title">Repositories</string>
    <string name="message_book_has_no_link">No link.</string>
    <string name="message_book_does_not_exist">This notebook does not exist any more.</string>
    <string name="message_note_created">Note created</string>
    <string name="message_failed_creating_note">Failed to create note</string>
    <string name="message_failed_updating_note">Failed to update note</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="schedule">Schedule</string>
    <string name="deadline">Deadline</string>
    <string name="closed">Closed</string>
    <string name="schedule_button_hint">Scheduled time</string>
    <string name="deadline_button_hint">Deadline time</string>
    <string name="closed_button_hint">Closed time</string>
    <string name="fragment_note_content_hint">Note content</string>
    <string name="books_context_menu_item_export">Export</string>
    <string name="books_context_menu_item_rename">Rename</string>
    <string name="books_context_menu_item_set_link">Set Link</string>
    <string name="books_context_menu_item_force_save">Force Save</string>
    <string name="books_context_menu_item_force_load">Force Load</string>
    <string name="move">Move</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="heads_action_menu_item_add_above">New above</string>
    <string name="heads_action_menu_item_add_under">New under</string>
    <string name="heads_action_menu_item_add_below">New below</string>
    <string name="heads_action_menu_item_paste_above">Paste above</string>
    <string name="heads_action_menu_item_paste_under">Paste under</string>
    <string name="heads_action_menu_item_paste_below">Paste below</string>
    <string name="heads_moving_action_menu_item_promote">Promote</string>
    <string name="heads_moving_action_menu_item_down">Down</string>
    <string name="heads_moving_action_menu_item_up">Up</string>
    <string name="heads_moving_action_menu_item_demote">Demote</string>
    <string name="new_note">New note</string>
    <string name="tap_to_create_new_note">Tap to create a new note</string>
    <string name="options_menu_item_search">Search</string>
    <string name="message_book_deleted">Notebook deleted</string>
    <string name="clear_database_dialog_message">Clear local database?</string>
    <string name="no_user_repos_configured_pref_summary">None configured yet</string>
    <string name="repos_options_menu_new_repo">New Repository</string>
    <string name="book_name_already_exists">Notebook %s already exists.</string>
    <string name="filter_name_already_exists">Search with the same name already exists</string>
    <string name="failed_creating_directory">Failed creating directory %s</string>
    <string name="version">What\'s new</string>
    <string name="search_hint">Search notes</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_summary">Clear local database</string>
    <string name="reload_getting_started">Import “Getting Started with Orgzly”</string>
    <string name="reload_getting_started_summary">Import the latest version of the notebook</string>
    <string name="getting_started_loaded">Notebook “Getting Started with Orgzly” loaded</string>
    <string name="fragment_note_does_not_exist">This note does not exist any more.</string>
    <string name="fragment_filter_does_not_exist">This search does not exist any more.</string>
    <string name="fragment_query_title">Search</string>
    <string name="repo_dropbox_button_not_linked">Link to Dropbox</string>
    <string name="repo_dropbox_button_linked">Unlink from Dropbox</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="updating_notes">Updating notes…</string>
    <string name="todo_keywords_configuration_changed_dialog_title">Keywords modified</string>
    <string name="todo_keywords_configuration_changed_dialog_message">Refresh notes to reflect the changes?</string>
    <string name="failure">Uh oh</string>
    <string name="no_notes_found_after_search">Your search did not match any notes</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="dialog_timestamp_repeater_default">.+1w</string>
    <string name="tags">Tags</string>
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="pref_title_notebooks">Notebooks</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="new_search">New Search</string>
    <string name="active">Active</string>
    <string name="no_repos">No repositories configured</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="book_encoding">Notebook\'s encoding</string>
    <string name="syncing_in_progress">Syncing…</string>
    <string name="syncing_book">Syncing %s…</string>
    <string name="syncing_failed">Sync: %s</string>
    <string name="syncing_failed_title">Sync failed</string>
    <string name="canceled">Canceled</string>
    <string name="canceling">Canceling…</string>
    <string name="directory">Directory</string>
    <string name="fragment_repo_dropbox_directory_desc">Directory inside Dropbox (e.g. “/Documents/Orgzly”)</string>
    <string name="fragment_repo_external_storage_directory_desc">Directory location (e.g. “file:/sdcard/orgzly”)</string>
    <string name="share_action_not_set">Share action not set</string>
    <string name="share_action_not_supported">Share action %s is not supported</string>
    <string name="share_type_not_set">Share type not set</string>
    <string name="share_type_not_supported">Share type %s is not supported</string>
    <string name="repositories">Repositories</string>
    <string name="invalid_repo_url">Invalid repository URL “%s”</string>
    <string name="message_unsupported_repository_type">Unsupported repository type</string>
    <string name="also_delete_linked_book">Delete linked remote notebook</string>
    <string name="message_deleting_book_failed">Deleting notebook failed: %s</string>
    <string name="fragment_left_drawer_list_view_content_description">Left Drawer</string>
    <string name="drawer_item">Drawer Item</string>
    <string name="prev_state">Prev State</string>
    <string name="next_state">Next State</string>
    <string name="new_above">New above</string>
    <string name="new_under">New under</string>
    <string name="new_below">New below</string>
    <string name="confirm_unlinking_from_dropbox_title">Unlink from Dropbox?</string>
    <string name="confirm_unlinking_from_dropbox_message">You will not be able to sync to Dropbox until you link to it again.</string>
    <string name="note_book_not_set">Notebook not set</string>
    <string name="can_not_be_empty">Cannot be empty</string>
    <string name="fragment_note_deadline_alarms_not_implemented">Note: Alarms are not implemented yet</string>
    <string name="no_notebooks">You have no notebooks</string>
    <string name="no_notes">Notebook has no notes</string>
    <string name="create_new_repository_for_syncing">Create new repository for syncing your notebooks</string>
    <string name="no_filters">You have no saved searches</string>
    <string name="book_shortcut_label">Orgzly notebook</string>
    <string name="pick_a_notebook">Pick a notebook</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="notebook_modified">Notebook modified</string>
    <string name="permissions_rationale_for_local_repo">Syncing with a local directory requires storage permission</string>
    <string name="permissions_rationale_for_book_export">Exporting notebook requires storage permission</string>
    <string name="permissions_rationale_for_sync_start">Syncing with local repositories requires storage permission</string>
    <string name="cycle_visibility">Fold/Unfold All</string>
    <string name="running_database_update">Upgrading database…</string>
    <string name="note_has_been_modified">Note modified</string>
    <string name="discard_or_save_changes">Save changes?</string>
    <string name="rename">Rename</string>
    <string name="fragment_repo_git_gituri_desc">Git uri (e.g. git@example.com:/path/to/repo)</string>
    <string name="fragment_repo_git_public_key_desc">Public key</string>
    <string name="fragment_repo_git_private_key_desc">Private Key</string>
    <string name="test_login">Test Login</string>
    <string name="generate_keys">Generate Keys</string>
    <string name="git_auth_method">Authentication Method</string>
    <string name="edit_credentials">Edit Credentials</string>
    <string name="copy_pubkey_to_clipboard">Copy Public Key</string>
    <string name="fragment_repo_git_storage_directory_desc">Select a directory to clone into</string>
</resources>