<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_repo_directory_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".android.ui.MainActivity">

    <!-- Browse button. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_repo_directory_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/browse"
            android:src="?attr/oic_browse_directory" />

        <Button
            android:id="@+id/fragment_repo_git_directory_browse_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/fragment_padding"
            android:layout_marginLeft="@dimen/fragment_padding"
            android:layout_marginRight="@dimen/fragment_padding"
            android:layout_marginStart="@dimen/fragment_padding"
            android:text="@string/browse" />

    </LinearLayout>

    <!-- Input local directory. -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_repo_git_local_directory_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_padding"
        android:layout_marginRight="@dimen/fragment_padding"
        android:layout_marginTop="@dimen/fragment_padding"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_repo_git_local_directory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_repo_external_storage_directory_desc"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <!-- Input remote uri. -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_repo_git_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_padding"
        android:layout_marginRight="@dimen/fragment_padding"
        android:layout_marginTop="@dimen/fragment_padding"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_repo_git_remote_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_repo_git_gituri_desc"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <!-- Choose authentication type -->
    <LinearLayout
        android:id="@+id/spinner_auth_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/authMethodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/git_auth_method" />

        <Spinner
            android:id="@+id/git_auth_method_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_repo_git_edit_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fragment_padding"
        android:layout_marginLeft="@dimen/fragment_padding"
        android:layout_marginRight="@dimen/fragment_padding"
        android:layout_marginStart="@dimen/fragment_padding"
        android:layout_weight="1"
        android:text="@string/edit_credentials" />

</LinearLayout>
